--- a/wp-content/themes/healthkart/style.css
+++ b/wp-content/themes/healthkart/style.css
@@ -1,15 +1,8 @@
 /*
 Theme Name: Healthkart
-<<<<<<< Updated upstream
-Theme URI: https://www.healthkart.com/
 Description: This is the blog site of Healthkart
-Author: Healthkart
-Author URI: https://www.healthkart.com/
-=======
-Theme URI: https://demo.studiopress.com/
-Description: This is the sample theme created for the Genesis Framework.
-Author: StudioPress
-Author URI: https://www.studiopress.com/
+Author: Ajency
+Author URI: https://ajency.in
 
 Version: 3.3.1
 
@@ -23,7 +16,6 @@ License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: genesis-sample
 Requires at least: 5.4
 Requires PHP: 5.6
->>>>>>> Stashed changes
 */
 
 /* Table of Contents
