--- a/wp-content/themes/healthkart/assets/scss/_global.scss
+++ b/wp-content/themes/healthkart/assets/scss/_global.scss
@@ -5,6 +5,12 @@
 body{
 	font-family: 'Roboto', sans-serif;
 	position: relative;
+	&.no-scrolling{
+		overflow: hidden;
+	}
+}
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
+	font-family: 'Roboto', sans-serif;
 }
 .container {
 	@media (min-width: 1200px){
