--- a/wp-content/themes/healthkart/assets/scss/_header.scss
+++ b/wp-content/themes/healthkart/assets/scss/_header.scss
@@ -6,7 +6,7 @@
 }
 .site-header{
     box-shadow: 0px 0px 8px 0px #cacaca;
-    padding: 0 10px;
+    padding: 0;
 	.tob-bar-menu{
 		display: none;
 		@media (min-width: 992px){
@@ -81,6 +81,7 @@
 				}
 				.input-group{
 					flex-wrap: nowrap;
+					width: auto;
 					.form-control{
 						@media (max-width: 991px){
 							border: 0;
@@ -393,11 +394,12 @@
 		@media (max-width: 991px){
 			display: block;
 			> div{
-				position: absolute;
+				position: fixed;
 				left: 0;
 				right: 0;
 				top: 0;
-				height: 100%;
+				height: 100vh;
+				overflow: auto;
 				background: #ffffff;
 				z-index: 99;
 				display: none;
