--- a/wp-content/themes/healthkart/assets/scss/_sidebar.scss
+++ b/wp-content/themes/healthkart/assets/scss/_sidebar.scss
@@ -1,6 +1,13 @@
 .sidebar{
 	float: none;
 	width: 100%;
+	.banner-image{
+		background: #E8F3F5;
+		width: 100%;
+		height: 250px;
+		margin: 20px 0;
+		border-radius: 4px;
+	}
 	.form-wrapper{
 		background: #F2F2F2;
 		padding: 26px;
