--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -92,6 +92,7 @@
 			align-items: center;
 			&-icons{
 				color: #9c9c9c;
+				margin-top: 10px ;
 				span{
 					font-size: 12px;
 				}
@@ -105,6 +106,10 @@
 					&:hover{
 						text-decoration: none;
 					}
+				}
+				i{
+				    font-size: 18px;
+				    cursor: pointer;
 				}
 			}
 			@media (max-width: 767px){ 
