desktop ui fixes

--- a/wp-content/themes/healthkart/assets/scss/_sidebar.scss
+++ b/wp-content/themes/healthkart/assets/scss/_sidebar.scss
@@ -64,6 +64,12 @@
 		.section-title{
 			border-bottom: 1px solid #707070;
 		}
+		p.no-post{
+			font-size: 14px;
+			text-align: center;
+			padding: 18px 0 10px;
+			font-weight: 900;
+		}
 		.recent-post{
 			border-bottom: 1px solid #bfbfbf;
 			.category{
