--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -19,6 +19,9 @@
 				font-size: 13px;
 			}
 		}
+		@media (max-width: 767px){
+			display: none;
+		}
 	}
 	.single_post_page{
 		.category{
@@ -49,16 +52,69 @@
 			font-size: 33px;
 			line-height: 44px;
 			font-weight: bold;
-			margin-top: 15px;
+			padding-bottom: 0;
+			margin-bottom: 0;
 			@media (max-width: 767px){
 				font-size: 26px;
-				line-height: 33px;
 			}
 		}
+	    .author{
+			padding: 10px;
+			@media (max-width: 767px){
+				font-size: 20px;
+				line-height: 24px;
+			}
+	    }
+	    .entry-header{
+	    	.post-title{
+				display: flex;
+			    align-items: flex-end;
+				.entry-title{
+				    flex: 0 0 66.66667%;
+				    max-width: 66.66667%;
+				    float: left;
+					@media (max-width: 767px){
+						max-width: 100%;
+						width: 100%;
+					}
+				}
+				.author{
+			    	float: left;
+					flex: 0 0 33.33333%;
+					max-width: 33.33333%;
+					padding: 15px 15px 0px 15px;
+					&-image{
+					    margin-right: 15px;
+						img{
+							width: 36px;
+							height: 36px;
+							border-radius: 36px;
+						}
+					}
+					.role{
+						color: $gray-600;
+					}
+					@media (max-width: 767px){
+						font-size: 26px;
+						line-height: 33px;
+						max-width: 100%;
+						width: 100%;
+						padding-left: 0;
+					}
+			    }
+			    @media (max-width: 767px){
+			    	flex-direction: column;
+			    }
+	    	}
+	    }
 		h2{
 			font-size: 26px;
 			line-height: 30px;
 		    padding: 15px 0;
+		    @media (max-width: 767px){
+		    	font-size: 18px;
+		    	line-height: 24px;
+		    }
 		}
 		.entry-content {
 			a{
@@ -92,14 +148,13 @@
 			align-items: center;
 			&-icons{
 				color: #9c9c9c;
-				margin-top: 10px ;
 				span{
 					font-size: 12px;
 				}
 				a{
 					color: #9c9c9c;
 					i{
-						font-size: 18px;
+						font-size: 20px;
 						padding-right: 14px;
 						cursor: pointer;
 					}
@@ -112,8 +167,28 @@
 				    cursor: pointer;
 				}
 			}
+			&-desktop{
+				@media (max-width: 767px){
+					display: none;
+				}
+			}
+			&-mob{
+			    display: flex;
+		        align-items: baseline;
+	            padding: 15px 0;
+				border-top: 0px;
+				margin: 0;
+			    .share-title{
+			    	font-size: 20px;
+			    	line-height: 26px;
+			    	color: #918F8F;
+			    	text-transform: capitalize;
+			    }
+				@media (min-width: 768px){
+					display: none;
+				}
+			}
 			@media (max-width: 767px){ 
-				display: block;
 				text-align: left;
 			}
 		}
@@ -121,6 +196,15 @@
 			 margin: 60px 0 30px;
 			.recent-post{
 			    border-top: 1px solid #bfbfbf;
+			    &-featured-img{
+			    	img{
+			    		width: 100%;
+			    		object-fit: cover;
+			    		@media (max-width: 991px){
+				    		height: 120px;
+    					}
+			    	}
+			    }
 				&-header{
 					.title{
 						padding: 0;
@@ -129,6 +213,10 @@
 							line-height: 26px;
 							font-weight: 900;
 							color: black;
+							@media (max-width: 767px){
+								font-size: 14px;
+								line-height: 19px;
+							}
 							&:hover{
 								text-decoration: none;
 							}
@@ -139,6 +227,12 @@
 					font-size: 14px;
 					line-height: 22px;
 				}
+				&-icons{
+					display: none;
+				}
+			}
+			@media (max-width: 767px){
+				display: none;
 			}
 		}
 	}
