--- a/wp-content/themes/healthkart/assets/scss/_sidebar.scss
+++ b/wp-content/themes/healthkart/assets/scss/_sidebar.scss
@@ -1,18 +1,23 @@
 .sidebar{
 	float: none;
 	width: 100%;
+	.widget{
+		margin-bottom: 0;
+	}
 	.banner-image{
 		background: #E8F3F5;
 		width: 100%;
 		height: 250px;
 		margin: 20px 0;
 		border-radius: 4px;
+		@media (max-width: 767px){
+			display: none;
+		}
 	}
 	.form-wrapper{
 		background: #F2F2F2;
 		padding: 26px;
 		.wrap{
-			padding-bottom: 30px;
 			.form-title{
 				font-size: 18px;
 				line-height: 24px;
@@ -27,6 +32,7 @@
 		    }
 		    p{
 	    	    font-size: 14px;
+    	        color: black;
 		    }
 		    input, textarea{
 		    	&::placeholder{
@@ -51,18 +57,55 @@
 			    font-size: 15px;
 			    line-height: 20px;
 			    letter-spacing: 0.6px;
+				@media (max-width: 767px){
+					height: 43px;
+				    line-height: 15px;
+				}
 			}
-			&:first-child{
+		}
+		&.qna{
+			.wrap{
 				.form-title{
 					border-bottom: 1px solid #bfbfbf;
 					text-transform: uppercase;
 				}
+				.hk-btn{
+					@media (max-width: 767px){
+					    margin-top: 30px;
+					}
+				}
+			}
+			@media (max-width: 767px){
+				background: transparent;
+				order: 1;
+			    padding: 0px 0 40px;
+			}
+		}
+		&.subscribe{
+			.wrap{
+				border-top: 1px solid rgba(112, 112, 112, 0.45);
+				padding-bottom: 20px;
+				.form-title{
+					font-size: 26px;
+					line-height: 33px;
+					padding-top: 34px;
+					@media (max-width: 767px){
+						padding-top: 0;
+					}
+				}
+				@media (max-width: 767px){
+					border-top: 0px;
+					padding: 0;
+				}
+			}
+			@media (max-width: 767px){
+				order: 4;
 			}
 		}
 	}
 	.related-articles{
 		.section-title{
-			border-bottom: 1px solid #707070;
+			border-bottom: 1px solid rgba(112, 112, 112, 0.45);
 		}
 		p.no-post{
 			font-size: 14px;
@@ -96,5 +139,53 @@
 				border-bottom: 0;
 			}
 		}
+		@media (max-width: 767px){
+			order: 2;
+		}
+	}
+	.read-these-next{
+		.section-title{
+			border-bottom: 1px solid rgba(112,112,112,0.45);
+		}
+		.title{
+			a{
+				font-size: 20px;
+				line-height: 26px;
+				font-weight: 900;
+				color: black;
+				&:hover{
+					text-decoration: none;
+				}
+			}
+		}
+		.next-articles{
+			.recent-post-icons{
+				display: flex;
+				margin: 30px 0 10px;
+				span.heart{
+					i{
+						color: red;
+					}
+				}
+				span.comment{
+					i{
+						color: #868686;
+					}
+				}
+			}
+			@media (max-width: 767px){
+				margin: 15px 0 0px;
+			}
+		}
+		@media (min-width: 768px){
+			display: none;
+		}
+		@media (max-width: 767px){
+			order: 3;
+		}
+	}
+	@media (max-width: 767px){
+	    display: inline-flex;
+    	flex-direction: column;
 	}
 }
