--- a/wp-content/themes/healthkart/assets/scss/_vars.scss
+++ b/wp-content/themes/healthkart/assets/scss/_vars.scss
@@ -8,6 +8,7 @@ $theme-colors: (
 $danger: #ad110a;
 $d-blue: #003E86;
 $gray-500: #adb5bd !default;
+$gray-600: #828282 !default;
 $gray-800: #343a40 !default;
 $white: #fff !default;
 $black: #000 !default;
