mobile menu fix

--- a/wp-content/themes/healthkart/assets/scss/_sidebar.scss
+++ b/wp-content/themes/healthkart/assets/scss/_sidebar.scss
@@ -158,6 +158,11 @@
 				}
 			}
 		}
+		.recent-post-featured-img{
+			img{
+				width: 100%;
+			}
+		}
 		.next-articles{
 			.recent-post-icons{
 				display: flex;
