--- a/wp-content/themes/healthkart/assets/scss/_header.scss
+++ b/wp-content/themes/healthkart/assets/scss/_header.scss
@@ -7,6 +7,7 @@
 .site-header{
     box-shadow: 0px 0px 8px 0px #cacaca;
     padding: 0;
+    transition: 0.4s all ease-in;
     position: unset;
 	.tob-bar-menu{
 		display: none;
@@ -166,21 +167,6 @@
 				padding-left: 0;
 				display: flex;
 				margin-bottom: 0;
-				@media (min-width: 992px){
-					> li:first-child{
-						display: none;
-						.sub-menu{
-							> li:first-child{
-								display: block;
-								.sub-menu{
-									> li:first-child{
-										display: block;
-									}
-								}
-							}
-						}
-					}
-				}
 				li{
 					list-style-type: none;
 					padding-right: 34px;
@@ -377,7 +363,7 @@
 		}
 		&.headerScroll{
 			@media (max-width: 991px){
-				position: fixed;
+				position: sticky;
 				top: 0;
 				left: 0;
 				right: 0;
@@ -705,6 +691,16 @@
 	.action-block{
 		@media (max-width: 991px){
 			display: none;
+		}
+	}
+	&.headerScroll{
+		@media (max-width: 991px){
+			position: sticky;
+			top: 0;
+			left: 0;
+			right: 0;
+			background: white;
+			z-index: 9;
 		}
 	}
 }
