thumbnail to medium

--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -207,6 +207,7 @@
 			    	img{
 			    		width: 100%;
 			    		object-fit: cover;
+		    		    height: 160px;
 			    		@media (max-width: 991px){
 				    		height: 120px;
     					}
