--- a/wp-content/themes/healthkart/assets/scss/_global.scss
+++ b/wp-content/themes/healthkart/assets/scss/_global.scss
@@ -75,6 +75,11 @@ a{
 		outline: 0;
 	}
 }
-.fb_iframe_widget_fluid_desktop, .fb_iframe_widget_fluid_desktop span, .fb_iframe_widget_fluid_desktop iframe{
+.fb_iframe_widget_fluid_desktop, .fb_iframe_widget_fluid_desktop span, .fb_iframe_widget_fluid_desktop iframe, .fb-comments.fb_iframe_widget, #u_0_0 {
 	width: 100% !important;
+}
+@media(max-width: 767px){
+	.fb_iframe_widget_fluid_desktop iframe{
+		margin-top: 15px;
+	}
 }
