--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -1,28 +1,33 @@
-
-.single-post{
-	.breadcrumbs-wrapper{
-		.breadcrumbs-inside{ 
-			margin: 20px 0;
-			a{
-				font-size: 13px;
-			    color: rgba(0, 0, 0,0.3);
-			    &:hover{
-			    	text-decoration: none;
+.breadcrumbs-wrapper{
+	.breadcrumbs-inside{ 
+		margin: 20px 0;
+		a{
+			font-size: 13px;
+		    color: rgba(0, 0, 0,0.3);
+		    &:hover{
+		    	text-decoration: none;
+		    }
+		    &:after{
+	    	    content: "/";
+			    margin: 0 10px;
+				color: rgba(0, 0, 0,0.3);
+		    }
+		    &:last-child{
+		    	color: rgba(0, 0, 0,0.6);
+		    	&:after{
+		    	    content: "";
 			    }
-			    &:after{
-		    	    content: "/";
-				    margin: 0 10px;
-    				color: rgba(0, 0, 0,0.3);
-			    }
-			}
-			.breadcrumb-title{
-				font-size: 13px;
-			}
+		    }
 		}
-		@media (max-width: 767px){
-			display: none;
+		.breadcrumb-title{
+			font-size: 13px;
 		}
 	}
+	@media (max-width: 767px){
+		display: none;
+	}
+}
+.single-post{
 	.single_post_page{
 		.category{
 			margin: 10px 0;
@@ -199,48 +204,121 @@
 				text-align: left;
 			}
 		}
-		.latest-reads{
-			 margin: 60px 0 30px;
-			.recent-post{
-			    border-top: 1px solid #bfbfbf;
-			    &-featured-img{
-			    	img{
-			    		width: 100%;
-			    		object-fit: cover;
-		    		    height: 160px;
-			    		@media (max-width: 991px){
-				    		height: 120px;
-    					}
-			    	}
-			    }
-				&-header{
-					.title{
-						padding: 0;
-						a{
-							font-size: 18px;
-							line-height: 26px;
-							font-weight: 900;
-							color: black;
-							@media (max-width: 767px){
-								font-size: 14px;
-								line-height: 19px;
-							}
-							&:hover{
-								text-decoration: none;
-							}
-						}
+	}
+}
+.category-name{
+	margin-bottom: 0;
+	a{
+		color: #000000;
+		padding: 0 15px;
+		font-size: 30px;
+		line-height: 34px;
+		font-weight: 900;
+		@media (max-width: 767px){
+			font-size: 20px;
+		}
+	}
+	@media (max-width: 767px){
+		margin-top: 20px;
+	}
+}
+.article-count{
+	margin-bottom: 0;
+}
+.latest-reads{
+	 margin: 60px 0 30px;
+	.recent-post{
+	    border-top: 1px solid #bfbfbf;
+	    &-featured-img{
+	    	img{
+	    		width: 100%;
+	    		object-fit: cover;
+	    		@media (min-width: 768px) and (max-width: 991px){
+		    		height: 120px;
+				}
+	    	}
+	    }
+		&-header{
+			.title{
+				padding: 0;
+				a{
+					font-size: 18px;
+					line-height: 26px;
+					font-weight: 900;
+					color: black;
+					@media (max-width: 767px){
+						font-size: 14px;
+						line-height: 19px;
+					}
+					&:hover{
+						text-decoration: none;
 					}
 				}
-				&-excerpt{
+			}
+		}
+		&-excerpt{
+			font-size: 14px;
+			line-height: 22px;
+			color: black;
+		}
+		&-icons{
+			display: none;
+		}
+	}
+	@media (max-width: 767px){
+		display: none;
+	}
+	&.category-list-view{
+		display: block !important;
+		margin-top: 0;
+		.recent-post {
+		    border-top: 0;
+    		.category{
+				margin: 10px 0;
+				a{
+					color: #00bfbf;
+					font-weight: 500;
 					font-size: 14px;
-					line-height: 22px;
-				}
-				&-icons{
-					display: none;
+				    line-height: 18px;
+				    &:hover{
+				    	text-decoration: none;
+				    }
 				}
 			}
-			@media (max-width: 767px){
-				display: none;
+			.dot{
+			    padding: 0 8px;
+				i{
+					font-size: 5px;
+					vertical-align: middle;
+				}
+			}
+			.last-read{
+				color: rgba(0,0,0,0.49);
+				font-size: 12px;
+				line-height: 18px;
+			}
+			&-header{
+				h2.title{
+					line-height: 24px;
+					padding: 6px 0px;
+					a{
+						text-transform: capitalize;
+					}
+				}
+			}
+			&-icons{
+				display: flex;
+				margin: 15px 0 10px;
+					span.heart{
+						i{
+							color: red;
+						}
+					}
+					span.comment{
+					i{
+						color: #868686;
+					}
+				}
 			}
 		}
 	}
