--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -236,6 +236,9 @@
 	    		@media (min-width: 768px) and (max-width: 991px){
 		    		height: 120px;
 				}
+				@media (min-width: 1024px){
+					height: 150px;
+				}
 	    	}
 	    }
 		&-header{
@@ -303,6 +306,13 @@
 					padding: 6px 0px;
 					a{
 						text-transform: capitalize;
+					}
+				}
+			}
+			&-featured-img{
+				img{
+					@media (min-width: 1024px){
+						height: 200px;
 					}
 				}
 			}
