--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -8962,5 +8962,7 @@ a:focus {
   line-height: 26px;
   font-weight: 900;
   color: black; }
+.latest-articles-single-content .content-description {
+  font-size: 15px; }
 
 /*# sourceMappingURL=theme-styles.css.map */
