--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -1,3 +1,33 @@
+.banner{
+	&-slider{
+		.slick-slide{
+			.slide__img{
+				img{
+					border-radius:20px;
+					height: 500px;
+					width: 100%;
+					object-fit: cover;
+				}
+			}
+		}
+	}
+	&-category{
+		&-single{
+			&-image{
+				img{
+					border-radius:20px;
+					height: 240px;
+					width: 100%;
+					object-fit: cover;
+				}
+			}
+			&-title{
+
+			}
+		}
+	}
+}
+
 .latest-articles{
 	&-heading{
 		border-bottom: 1px solid #ececec;
