--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -120,35 +120,46 @@
 	    	}
 	    }
 		h2{
-			font-size: 26px;
+			font-size: 24px;
 			line-height: 30px;
 		    padding: 15px 0;
+		    font-weight: 400;
 		    @media (max-width: 767px){
 		    	font-size: 18px;
 		    	line-height: 24px;
 		    }
 		}
 		.entry-content {
+			margin: 0 30px;
 			a{
 				color: #00bfbf;
 				span{
-					color: #00bfbf !important;
+					color: #272727 !important;
 				    font-weight: 400;
+				    text-decoration: underline;
+				    transition: all 0.35s ease;
+				    color: #212326 !important;
+				    &:hover{
+				    	text-decoration: none;
+				    }
 				}
 			}
 			p, span{
-			    font-size: 14px !important;
+			    font-size: 16px !important;
 			    font-family: 'Roboto', sans-serif !important;
-	   			line-height: 30px;
-	   			padding-bottom: 10px;
+	   			line-height: 32px;
+	   			color: #212326;
    			}
    			ul, ol{
    				li{
-				    font-size: 14px !important;
+				    font-size: 16px !important;
 		   			line-height: 30px;
-		   			padding-bottom: 10px;
+		   			color: #212326;
    				}
    			}
+		}
+		.hk-content-image{
+			margin: 10px 25px 25px;
 		}
 		.share{
 			margin: 30px 0;
