--- a/wp-content/themes/healthkart/assets/scss/_sidebar.scss
+++ b/wp-content/themes/healthkart/assets/scss/_sidebar.scss
@@ -4,6 +4,9 @@
 	.widget{
 		margin-bottom: 0;
 	}
+	.widget_media_image{
+		margin: 20px 0;
+	}
 	.banner-image{
 		background: #E8F3F5;
 		width: 100%;
