--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -9100,8 +9100,18 @@ strong {
 
 .transformation-section-single-image img {
   height: 250px;
-  width: 48%;
+  width: 100%;
   object-fit: cover; }
+.transformation-section-single-image .img-tag {
+  position: absolute;
+  color: #fff;
+  background-color: #212121;
+  border-radius: 10px;
+  border: 1px solid #707070;
+  bottom: 10px;
+  left: 20px;
+  font-size: 18px;
+  font-weight: bold; }
 .transformation-section-single-content .content-title .title a {
   font-size: 20px; }
 .transformation-section-heading {
