--- a/wp-content/themes/healthkart/assets/scss/_global.scss
+++ b/wp-content/themes/healthkart/assets/scss/_global.scss
@@ -86,3 +86,15 @@ a{
 strong{
 	color: #212326 !important;
 }
+.overlay {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.55);
+	transition: 0.2s;
+	opacity: 1;
+	z-index: 1;
+	border-radius: 24px;
+}
