--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -13,13 +13,39 @@
 	}
 	&-category{
 		&-single{
+			position: relative;
 			&-image{
+				position: relative;
+			    margin-bottom: 15px;
 				img{
 					border-radius:20px;
 					height: 240px;
 					width: 100%;
 					object-fit: cover;
 				}
+			}
+			&-title{
+			    position: absolute;
+			    top: 50%;
+			    left: 50%;
+			    transform: translate(-50%, -50%);
+			    color: white;
+			    z-index: 9;
+			    font-size: 26px;
+			    text-transform: uppercase;
+			    font-weight: 900;
+			}
+		}
+		&-title{
+			@media (min-width: 768px){
+				display: none;
+			}
+			@media (max-width: 767px){
+				display: block;
+				color: #090909;
+				font-size: 18px;
+				font-weight: bold;
+				margin: 20px 0;
 			}
 		}
 	}
@@ -38,12 +64,21 @@
 			.latest-articles-single-content .content-title{
 				.title a{
 					font-size: 25px;
+				    font-weight: 900;
+		   	 		color: black;
 				}
 			}
 			.latest-articles-single-image{
 				img{
 					height: 300px;
+					@media (max-width: 767px){
+						height: auto;
+					}
 				}
+			}
+			@media (max-width: 767px){
+				padding-right: 15px;
+				padding-bottom: 2rem !important;
 			}
 		}
 		&-image{
@@ -51,17 +86,31 @@
 				height: 150px;
 				width: 100%;
     			object-fit: cover;
+    			@media (max-width: 991px){
+    				height: 85px;
+    			}
+				@media (max-width: 767px){
+					height: auto;
+				}
 			}
 		}
 		&-content{
 			.title{
-				line-height: 26px;
+			    line-height: 22px !important;
 				a{
 					font-size: 18px;
+				    font-weight: 900;
+		    		color: black;
 				}
 			}
 			.content-description{
 				font-size: 15px;
+				@media (max-width: 991px){
+					font-size: 13px;
+				}
+			}
+			@media (max-width: 767px){
+				margin-top: 1rem;
 			}
 		}
 	}
@@ -73,7 +122,7 @@
 		    font-weight: 500;
 		    font-size: 14px;
 		    line-height: 18px;
-		}
+	    }
 		.dot{
 			padding: 0 8px;
 			i{
@@ -83,16 +132,16 @@
 		}
 		.last-read{
 			color: rgba(0, 0, 0, 0.49);
-		    font-size: 14px;
-		    line-height: 26px;
+		    font-size: 12px;
+		    line-height: 18px;
 		}
-		.title{
-			line-height: 1.1;
-			a{
-			    line-height: 26px;
-			    font-weight: 900;
-			    color: black;
-			}
+	}
+	.title{
+		line-height: 26px;
+		a{
+		    line-height: 26px;
+		    font-weight: 900;
+		    color: black;
 		}
 	}
 	&-fields{
@@ -120,7 +169,11 @@
 		}
 	}
 }
-
+.content-description{
+	font-size: 14px;
+	line-height: 18px;
+	margin: 15px 0;
+}
 .trending-articles{
 	&-heading{
 		border-bottom: 1px solid #ececec;
@@ -134,19 +187,53 @@
 				height: 100px;
 				width: 100%;
     			object-fit: cover;
+    			@media (max-width: 991px){
+    				height: 120px;
+    			}
+    			@media (max-width: 767px){
+    				height: auto;
+    			}
+			}
+			@media (min-width: 768px){
+				margin-bottom: 20px;
+			}
+			@media (max-width: 767px){
+				padding: 0;
+				margin-bottom: 0.5rem !important;
 			}
 		}
 		&-main{
 			img{
 				height: 200px;
+				@media (max-width: 767px){
+					height: auto;
+				}
 			}
 		}
 		&-content{
 			.content-title{
-				.title a{
-					font-size: 20px;
+				.title {
+				 	line-height: 22px !important;
+					a{
+						font-size: 18px;
+					    font-weight: 900;
+		    			color: black;
+					}
 				}
 			}
+			.content-description{
+				@media (max-width: 991px){
+					font-size: 13px;
+				    line-height: 18px;
+				    margin: 12px 0;
+				}
+			}
+			@media (max-width: 767px){
+				margin-top: 1rem;
+			}
+		}
+		@media (max-width: 767px){
+			padding-bottom: 2rem !important;
 		}
 	}
 }
@@ -164,15 +251,44 @@
 				height: 150px;
 				width: 100%;
     			object-fit: cover;
+    			@media (max-width: 991px){
+    				height: 120px;
+    			}
+    			@media (max-width: 767px){
+    				height: auto;
+    			}
+			}
+			@media (max-width: 767px){
+				padding: 0;
 			}
 		}
 		&-content{
 			.content-title{
-				.title a{
-					font-size: 20px;
+				.title{
+					line-height: 22px !important;
+					 a{
+						font-size: 18px;
+					    font-weight: 900;
+		    			color: black;
+					}
+				}
+			}
+			.content-description{
+				@media (max-width: 991px){
+					font-size: 13px;
+				    line-height: 18px;
+				    margin: 12px 0;
 				}
 			}
 		}
+	}
+	@media (max-width: 767px){
+		flex-wrap: nowrap;
+    	overflow: auto;
+	    align-items: baseline;
+    	.category, .dot, .last-read, .content-description{
+    		display: none;
+    	}
 	}
 }
 .hk-button{
@@ -188,12 +304,22 @@
 		background-color: #00bfbf !important;
 	}
 }
+.view-all{
+	color: #fff;
+	background-color: #00bfbf !important;
+	border: 1px solid #00bfbf !important;
+	@media (min-width: 768px){
+		display: none;
+	}
+}
 .category-buttons{
 	.category-buttons-single{
 		border-radius: 10px;
 		background-color: transparent;
 		color: #4d4d4d;
 		border-color: #bfbfbf;
+		margin: 0 0 15px;
+		transition: all 0.35s ease;
 		&:focus {
 			outline: none;
 			box-shadow: none;
@@ -201,13 +327,14 @@
 		}
 		&:hover{
 			background-color: #bfbfbf;
+			border: 1px solid #bfbfbf;
 		}
 		&-active{
 			color: #fff;
 			background-color: #00bfbf !important;
-			border-color: #00bfbf !important;
+			border: 1px solid #00bfbf !important;
 			&:hover{
-				background-color: #009999 !important;
+				background-color: #00bfbf !important;
 			}
 			&:focus {
 				outline: none;
@@ -215,6 +342,14 @@
 				background-color: #00bfbf !important;
 			}
 		}
+	}
+	&::-webkit-scrollbar{
+		width: 0;
+		display: none;
+	}
+	@media (max-width: 767px){
+		display: flex;
+		overflow: auto;
 	}
 }
 .videos{
@@ -290,7 +425,7 @@
 	position: relative;
 	z-index: 1;
 	height: 100%;
-	max-width: 700px;
+	//max-width: 700px;
 
 
 	.slider {
@@ -315,5 +450,110 @@
 		&.slick-active img {
 			transform: scale(1);
 		}
+	}
+	.slick{
+		&-dots{
+			position: absolute;
+			bottom: 0;
+			display: flex;
+			justify-content: flex-end;
+			width: 100%;
+		    padding-right: 20px;
+			li{
+				position: relative;
+				&:before{
+					font-family: 'slick';
+					font-size: 30px;
+					line-height: 20px;
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 20px;
+					height: 20px;
+					content: '•';
+					text-align: center;
+					color: #00bfbf;
+					-webkit-font-smoothing: antialiased;
+					-moz-osx-font-smoothing: grayscale;
+				}
+			}
+			@media (max-width: 767px){
+				position: relative;
+				justify-content: center;
+				margin: 20px 0;
+			}
+		}
+		&-active{
+			&:before{
+				opacity: 0.50;
+			}
+		}
+		&-arrow{
+			position: absolute;
+			top: 50%;
+			margin-top: -15px;
+		    display: inline-block;
+		    width: 12px;
+		    height: 12px;
+		    border: 0.125rem solid;
+		    border-bottom: 0;
+		    border-left: 0;
+		    border-radius: 1px;
+		    color: white;
+		    z-index: 9;
+			&.slick-prev{
+				left: 10px;
+	            transform: rotate(-136deg);
+			}
+			&.slick-next{
+				right: 10px;
+		        transform: rotate(45deg);
+			}
+			@media (max-width: 767px){
+				display: none !important;
+			}
+		}
+	}
+	button{
+		font-size: 0;
+		line-height: 0;
+		display: block;
+		width: 20px;
+		height: 20px;
+		padding: 5px;
+		cursor: pointer;
+		color: transparent;
+		border: 0;
+		outline: none;
+		background: transparent;
+	}
+	.slide__content{
+	    position: absolute;
+	    bottom: 24px;
+	    left: 24px;
+	    max-width: 450px;
+	    z-index: 9;
+	    a.category{
+	    	color: #18BFBF;
+	    	font-size: 14px;
+	    }
+	    .dot, .last-read {
+	    	color: white;
+	    	font-size: 14px;
+	    }
+	    h2.title {
+	    	margin-top: 10px;
+	    	a{
+	    		color: white;
+	    		line-height: 36px;
+    		}
+	    }
+	    @media (max-width: 767px){
+			top: 40%;
+			left: 0;
+			right: 0;
+			margin: auto;
+			text-align: center;
+	    }
 	}
 }
