--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -421,6 +421,43 @@
 	}
 }
 
+
+.more-articles{
+	&-single{
+		&-image{
+			img{
+				height: 150px;
+				width: 100%;
+    			object-fit: cover;
+			}
+		}
+		&-content{
+			.title{
+				line-height: 26px;
+				a{
+					font-size: 18px;
+				}
+			}
+			.content-description{
+				font-size: 15px;
+			}
+		}
+	}
+	&-heading{
+		border-bottom: 1px solid #ececec;
+		font-weight: bold;
+		font-size: 20px;
+		font-weight: bold;
+	}
+}
+.home-banner-space{
+	img{
+		height: 400px;
+		width: 100%;
+		object-fit: cover;
+	}
+}
+
 .slideshow {
 	position: relative;
 	z-index: 1;
