--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -100,7 +100,7 @@
 				a{
 					font-size: 18px;
 				    font-weight: 900;
-		    		color: black;
+		    		color: #000;
 				}
 			}
 			.content-description{
@@ -409,6 +409,8 @@
 			.content-title{
 				.title a{
 					font-size: 20px;
+					font-weight: 900;
+					color: #000;
 				}
 			}
 		}
@@ -420,7 +422,6 @@
 		font-weight: bold;
 	}
 }
-
 
 .more-articles{
 	&-single{
@@ -436,6 +437,8 @@
 				line-height: 26px;
 				a{
 					font-size: 18px;
+					font-weight: 900;
+					color: #000;
 				}
 			}
 			.content-description{
